<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lifetime" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/lifetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/connection_state3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour" />

        <Button
            android:id="@+id/reset_lifetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_lifetime" />
    </LinearLayout>

    <Button
        android:id="@+id/reset_all_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/reset_all_settings" />

</LinearLayout>
